// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultToast component testing DefaultToast error 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ hnOgiD"
    style="height: 8px;"
  >
    <div
      class="sc-gsTCUz MQbVU"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSgupP ipKyws"
        display="flex"
      >
        <div
          class="sc-jSgupP eqnPnr"
          display="flex"
        >
          <div
            class="sc-dlfnbm cVJRSS"
          >
            <div
              class="sc-gKsewC ksnHnz"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H24V24H0Z"
                  fill="none"
                />
                <path
                  d="M12.866,3l9.526,16.5a1,1,0,0,1-.866,1.5H2.474a1,1,0,0,1-.866-1.5L11.134,3a1,1,0,0,1,1.732,0ZM11,16v2h2V16Zm0-7v5h2V9Z"
                  fill="#EB0A4E"
                />
              </svg>
            </div>
          </div>
          <p
            class="sc-iBPRYJ hATML"
            color="#A90556"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKgILt gJAuVO"
        >
          <div
            class="sc-gKsewC ilAoin"
            size="18"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#F96979"
                height="23.141"
                transform="translate(18.364 2) rotate(45)"
                width="5.142"
              />
              <rect
                fill="#F96979"
                height="23.141"
                transform="translate(2 5.636) rotate(-45)"
                width="5.143"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg hkLXKm"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast info 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ hnOgiD"
    style="height: 8px;"
  >
    <div
      class="sc-gsTCUz gKnIGq"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSgupP ipKyws"
        display="flex"
      >
        <div
          class="sc-jSgupP eqnPnr"
          display="flex"
        >
          <div
            class="sc-dlfnbm lncPlv"
          >
            <div
              class="sc-gKsewC ilAoin"
              size="18"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#FDFEFF"
                  height="23.141"
                  transform="translate(18.364 2) rotate(45)"
                  width="5.142"
                />
                <rect
                  fill="#FDFEFF"
                  height="23.141"
                  transform="translate(2 5.636) rotate(-45)"
                  width="5.143"
                />
              </svg>
            </div>
          </div>
          <p
            class="sc-iBPRYJ iduCZR"
            color="#054BAF"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKgILt gJAuVO"
        >
          <div
            class="sc-gKsewC ilAoin"
            size="18"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#9CDDFD"
                height="23.141"
                transform="translate(18.364 2) rotate(45)"
                width="5.142"
              />
              <rect
                fill="#9CDDFD"
                height="23.141"
                transform="translate(2 5.636) rotate(-45)"
                width="5.143"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg fTkemX"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast success 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ hnOgiD"
    style="height: 8px;"
  >
    <div
      class="sc-gsTCUz kvwMme"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSgupP ipKyws"
        display="flex"
      >
        <div
          class="sc-jSgupP eqnPnr"
          display="flex"
        >
          <div
            class="sc-dlfnbm fsoKiF"
          >
            <div
              class="sc-gKsewC ksnHnz"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H24V24H0Z"
                  fill="none"
                />
                <path
                  d="M12,22A10,10,0,1,1,22,12,10,10,0,0,1,12,22Zm-1-6,7.07-7.071L16.659,7.515,11,13.172,8.174,10.343,6.76,11.757Z"
                  fill="#63C427"
                />
              </svg>
            </div>
          </div>
          <p
            class="sc-iBPRYJ czMXCT"
            color="#338D13"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKgILt gJAuVO"
        >
          <div
            class="sc-gKsewC ilAoin"
            size="18"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#B4ED7B"
                height="23.141"
                transform="translate(18.364 2) rotate(45)"
                width="5.142"
              />
              <rect
                fill="#B4ED7B"
                height="23.141"
                transform="translate(2 5.636) rotate(-45)"
                width="5.143"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg fNVMSm"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast warning 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ hnOgiD"
    style="height: 8px;"
  >
    <div
      class="sc-gsTCUz fYqDCG"
      opacity="1"
      transform="translate3d(0,0,0)"
    >
      <div
        class="sc-jSgupP ipKyws"
        display="flex"
      >
        <div
          class="sc-jSgupP eqnPnr"
          display="flex"
        >
          <div
            class="sc-dlfnbm gWrMCg"
          >
            <div
              class="sc-gKsewC ilAoin"
              size="18"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#FDFEFF"
                  height="23.141"
                  transform="translate(18.364 2) rotate(45)"
                  width="5.142"
                />
                <rect
                  fill="#FDFEFF"
                  height="23.141"
                  transform="translate(2 5.636) rotate(-45)"
                  width="5.143"
                />
              </svg>
            </div>
          </div>
          <p
            class="sc-iBPRYJ ieYnZG"
            color="#785F03"
            font-size="14px"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hKgILt gJAuVO"
        >
          <div
            class="sc-gKsewC ilAoin"
            size="18"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#FDE54E"
                height="23.141"
                transform="translate(18.364 2) rotate(45)"
                width="5.142"
              />
              <rect
                fill="#FDE54E"
                height="23.141"
                transform="translate(2 5.636) rotate(-45)"
                width="5.143"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-eCssSg kocHfc"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;
